templates/helm-state-metrics_template.yaml
---
# Source: helm-state-metrics/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:     
    app: helm-state-metrics
    heritage: Helm
    release: release-name
    chart: helm-state-metrics-0.2.2
  name: release-name-helm-state-metrics
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: helm-state-metrics
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 9104
        protocol: TCP
---
# Source: helm-state-metrics/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:     
    app: helm-state-metrics
    heritage: Helm
    release: release-name
    chart: helm-state-metrics-0.2.2
  name: release-name-helm-state-metrics
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-state-metrics
      release: release-name
  template:
    metadata:
      labels:
        app: helm-state-metrics
        release: release-name
      annotations:
        prometheus.io/port: "9104"
        prometheus.io/scrape: "true"
    spec:
      containers:
      - name: helm-state-metrics
        image: "docker-registry.wikimedia.org/helm-state-metrics:0.2.0-1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9104
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        resources:
          {}
      serviceAccountName: release-name-helm-state-metrics
